Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-105148

Rotated qml combobox popup placed incorrectly

    XMLWordPrintable

Details

    • Linux/Yocto, Windows
    • 5c1d96b70 (dev), 7fd17850a (6.5), fee0fc30a (6.4), 5ccfea3bf (tqtc/lts-6.2)

    Description

      When a combobox in a window that is rotated any degrees does not have enough space "below" it to properly display its popup, the offset the popup is adjusted to is incorrect.

       

      See the attached project.

      Attachments

        1. inverted_combobox_test.zip
          4 kB
          Kevin Zhang
        2. screenshot-1.png
          7 kB
          Tim Jenssen

        Issue Links

          For Gerrit Dashboard: QTBUG-105148
          # Subject Branch Project Status CR V

          Activity

            People

              sami.shalayel Sami Shalayel
              kevin.zhang Kevin Zhang
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes